AdminNetworkPolicy.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: cluster-security
spec:
  priority: 1
  subject:
    namespaces: {}
  egress:
  - name: "allow-internal-dns"
    action: "Allow"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "allow-external-dns"
    action: "Allow"
    to:
    - networks: ["8.8.8.8/32"]
    ports:
      - portNumber:
          protocol: UDP
          port: 53
